# claude-code-barber

./: CHANGELOG.md  Cargo.toml  LICENSE  QUEUE.md  README.md  STATUSLINE_PLAN.md
.github/workflows/: ci.yml  release.yml
benches/: compression.rs
benchmarks/fixtures/: cargo_build_noisy.txt  git_status_noisy.txt  npm_install_noisy.txt  pip_install_noisy.txt  pytest_output.txt  tsc_output.txt
config/: hooks.json  model_metadata.toml  providers.toml
data/: architect.json
datasets/: sentinel.yaml
docs/: ARCHITECTURE.md  TEST_DATA.md  TEST_DATA_LAYER3.md  lora-training.md
docs/reviews/: comprehensive-review-2026-06-11.md
docs/stories/: ccb_release_changelog.md  ccb_release_ci.md  ccb_release_license.md  ccb_release_unit_tests.md  sprint_ccb_0_4_5_6_plan.md  story_ccb_001_expert_feature_flag.md  story_ccb_002_expert_graph_schema.md  story_ccb_003_expert_cli.md  story_ccb_004_expert_hook_query.md  story_ccb_005_test_trim.md  story_ccb_006_test_graph.md  story_ccb_007_test_expert.md  story_ccb_008_route_command.md  story_ccb_009_expert_ingest.md  story_ccb_010_sentinel_dataset.md  story_ccb_011_lora_pipeline.md  story_ccb_012_architect_expert_layer.md  story_ccb_013_telemetry_ab_test.md  story_ccb_014_yasr_statusline.md  story_ccb_015_graph_edges.md  story_ccb_016_graph_traversal.md  story_ccb_017_graph_watch.md  story_ccb_018_memory_traces.md  story_ccb_019_memory_patterns.md  story_ccb_020_memory_search.md  story_ccb_021_locomo_benchmark.md  story_ccb_022_statusline_visual_fixes.md  story_ccb_023_plugin_auth_wiring.md  story_ccb_024_context_authority_index.md  story_ccb_025_context_authority_hooks.md  story_ccb_026_context_authority_feedback.md  story_ccb_027_context_dashboard.md  story_ccb_028_plan_build_loop.md  story_ccb_029_router_tier_resolution.md  story_ccb_030_clippy_lint_suppressions.md
hooks/: classifier.sh  context_monitor.sh  expert_pretooluse.sh  skill_loader.sh
personas/: architect.json  coder.json  frontend.json  implementation_validator.json  interviewer.json  planner.json  researcher.json  sentinel.json  test_verifier.json
scripts/: ccb-setup.sh  extract-codex-to-ccb.py  pull-codex.sh  train-lora.sh
src/: analytics.rs  cli.rs  config.rs  hooks.rs  lib.rs  log.rs  main.rs  utils.rs
src/features/: bench.rs  buzz.rs  classify.rs  context.rs  cut.rs  expert.rs  factory.rs  fade.rs  graph.rs  index.rs  install.rs  lineup.rs  loop_cmd.rs  model_metadata.rs  plugins.rs  providers.rs  route.rs  session_mem.rs  trim.rs
src/features/context/: feedback.rs
src/features/memory/: db.rs  mine.rs  mod.rs  patterns.rs  skills.rs
src/features/rates/: mod.rs  model_rates.rs
src/features/status/: border.rs  ccb_bridge.rs  demo.rs  gradient.rs  mod.rs  mon.rs  renderer.rs  session.rs  themes.rs
testdata/locomo/: conversations.json
tests/: expert_integration.rs  fade_integration.rs  graph_integration.rs  install_integration.rs  plugins_integration.rs  route_integration.rs  status_integration.rs  status_unit.rs  trim_integration.rs
