[package]
name = "ccb"
version = "0.1.0"
edition = "2021"
description = "Claude Code Barber — composable token management for Claude Code and AI coding agents"
license = "MIT"
repository = "https://github.com/LitlBitz/claude-code-barber"
keywords = ["claude", "llm", "tokens", "context", "ai"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "ccb"
path = "src/main.rs"

[[bench]]
name = "compression"
harness = false

[features]
default = ["trim", "fade"]
trim    = []
fade    = []
sandbox = []
terse   = []
graph   = []
full    = ["trim", "fade", "sandbox", "terse", "graph"]

[dependencies]
clap               = { version = "4", features = ["derive", "color"] }
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
toml               = "0.8"
anyhow             = "1"
dirs               = "5"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
chrono             = { version = "0.4", features = ["serde"] }

[dev-dependencies]
assert_cmd  = "2"
predicates  = "2"
criterion   = { version = "0.5", features = ["html_reports"] }
