[package]
name = "ccb"
version = "0.1.0"
edition = "2021"
description = "Claude Code Barber — composable token management for Claude Code and AI coding agents"
license = "MIT"
repository = "https://github.com/thrtysxty/claude-code-barber"
keywords = ["claude", "llm", "tokens", "context", "ai"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "ccb"
path = "src/main.rs"

[[bin]]
name = "ccb-route"
path = "src/bin/ccb-route.rs"
required-features = ["route"]

[[bench]]
name = "compression"
harness = false

[[test]]
name = "graph_integration"
path = "tests/graph_integration.rs"
required-features = ["graph"]

[[test]]
name = "expert_integration"
path = "tests/expert_integration.rs"
required-features = ["expert"]

[features]
default = ["trim", "fade", "route"]
trim    = []
fade    = []
sandbox = []
terse   = []
graph   = ["dep:tree-sitter", "dep:tree-sitter-rust", "dep:tree-sitter-python",
           "dep:tree-sitter-typescript", "dep:tree-sitter-javascript",
           "dep:rusqlite", "dep:walkdir", "dep:ignore"]
route   = ["dep:tokio", "dep:axum", "dep:reqwest", "dep:bytes", "dep:futures-util", "dep:uuid"]
full    = ["trim", "fade", "sandbox", "terse", "graph", "route", "expert", "classify"]
expert  = ["dep:rusqlite", "dep:serde_yaml"]
classify = ["dep:reqwest", "dep:regex-lite"]

[dependencies]
clap               = { version = "4", features = ["derive", "color"] }
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
serde_yaml         = { version = "0.9", optional = true }
toml               = "0.8"
anyhow             = "1"
dirs               = "5"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
chrono             = { version = "0.4", features = ["serde"] }

# graph feature deps
tree-sitter            = { version = "0.22", optional = true }
tree-sitter-rust       = { version = "0.21", optional = true }
tree-sitter-python     = { version = "0.21", optional = true }
tree-sitter-typescript = { version = "0.21", optional = true }
tree-sitter-javascript = { version = "0.21", optional = true }
rusqlite               = { version = "0.31", features = ["bundled"], optional = true }
walkdir                = { version = "2",    optional = true }
ignore                 = { version = "0.4",  optional = true }
regex-lite             = { version = "0.1",  optional = true }

# route feature deps
tokio        = { version = "1",    features = ["full"],                  optional = true }
axum         = { version = "0.7",                                        optional = true }
reqwest      = { version = "0.12", features = ["stream", "json", "blocking"], optional = true }
bytes        = { version = "1",                                          optional = true }
futures-util = { version = "0.3",                                        optional = true }
uuid         = { version = "1",    features = ["v4"],                    optional = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "2"
tempfile   = "3"
criterion  = { version = "0.5", features = ["html_reports"] }
